--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -58,8 +58,7 @@ h5 {
 #logo-nav {
     margin-left: 0;
     margin-right: 0;
-    padding-left: 20px;
-    padding-right: 0;
+    padding: 7px 0 0 20px;
 }
 
 #div-nav {
@@ -69,6 +68,7 @@ h5 {
 #nav > h5 {
     display: inline-block;
     margin-right: 50px;
+    padding-top: 29px;
 }
 
 #nav > h5 > a, footer h5 {
@@ -112,7 +112,5 @@ footer nav a:hover {
 }
 /* MEDIA QUERIES */
 @media screen and (min-width: 1280px) {
-    img {
-        border: 1px red solid
-    }
+
 }
