--- a/public/CSS/admin/articles.css
+++ b/public/CSS/admin/articles.css
@@ -75,12 +75,12 @@ label
     background:#fff;
     border-radius:0 10px 10px 0;
     box-shadow:15px 20px 0px rgba(0,0,0,0.1);
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
-    background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fff9f9+0,ffe9e9+47,ffd8d7+100 */
+    background: rgb(255,249,249); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(255,249,249,1) 0%, rgba(255,233,233,1) 47%, rgba(255,216,215,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(255,249,249,1) 0%,rgba(255,233,233,1) 47%,rgba(255,216,215,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(255,249,249,1) 0%,rgba(255,233,233,1) 47%,rgba(255,216,215,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff9f9', endColorstr='#ffd8d7',GradientType=0 ); /* IE6-9 */
     margin-bottom: 50px;
     border: 2px solid #C9C9C9;
 }
