--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -34,6 +34,7 @@
 		<div class="row d-flex justify-content-center">
 			<div class="row">
 				<div id='user' class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
+					<h3 class="text-center">Vos articles</h3>
                     {% for article in own_articles %}
 						<div class="row d-flex justify-content-between title_article">
 							<div class="col-md-2 col-lg-2">
@@ -56,8 +57,9 @@
                     {% endfor %}
 				</div>
 			</div>
+			<!-- Div pour l'affichage des articles mode Admin -->
+			<div id="admin" class="row"></div>
 		</div>
-		{% include "admin/include_admin_articles.html.twig" %}
 	</div>
 {% endblock %}
 {% block javascripts %}
