--- a/templates/admin/include_admin_articles.html.twig
+++ b/templates/admin/include_admin_articles.html.twig
@@ -1,4 +1,5 @@
-<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
+<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_other_article">
+    <h3 class="text-center">Tous les articles</h3>
     {% if other_articles is defined %}
         {% for article in other_articles %}
             <div class="row d-flex justify-content-between title_article">
@@ -6,7 +7,7 @@
                     <h5>{{ article.title }}</h5>
                 </div>
                 <div class="col-md-2 col-lg-2">
-                    <p>Date</p>
+                    <p>{{ article.date|date('d-m-Y') }}</p>
                 </div>
             </div>
             <div class="row">
