--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,10 +14,10 @@
             <div class="row justify-content-around">
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
-                        <h1>A Big Title</h1>
+                        <h1>Cocorico Digital</h1>
                     </div>
                     <div class="row col-xs-6">
-                        <h2>A Subtitle</h2>
+                        <h2>L'agence web au coeur de vos besoins</h2>
                     </div>
                     <div class="row">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nimis multa. Honesta oratio,
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 display-small">
-                    <img src="{{ asset('images/img.jpeg') }}" class="img-fluid">
+                    <img src="{{ asset('images/img.jpeg') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
