Add services picto in homepage

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -47,8 +47,8 @@
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-xs-12 col-lg-3">
-                    <div>
-                        <img src="{{ asset('images/img.jpeg') }} " height="100" width="100">
+                    <div class="row justify-content-center">
+                        <img src="{{ asset('images/marketing.svg') }} " height="100" width="100">
                     </div>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria
@@ -60,8 +60,8 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-lg-3">
-                    <div>
-                        <img src="{{ asset('images/img.jpeg') }} " height="100" width="100">
+                    <div class="row justify-content-center">
+                        <img src="{{ asset('images/design.svg') }} " height="100" width="100">
                     </div>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria
@@ -73,8 +73,8 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-lg-3">
-                    <div>
-                        <img src="{{ asset('images/img.jpeg') }} " height="100" width="100">
+                    <div class="row justify-content-center">
+                        <img src="{{ asset('images/dev.svg') }} " height="100" width="100">
                     </div>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria
