--- a/templates/admin/compte.html.twig
+++ b/templates/admin/compte.html.twig
@@ -5,59 +5,76 @@
 {% endblock %}
 {% block body %}
 	<div class="container-fluid">
-	<div class="row d-flex justify-content-center ">
-		<div class="col-sm-4 col-4 col-md-3 col-lg-auto">
-			<div class="row">
-				<div class="col-sm-4 col-4 col-md-2 col-lg-2">
-					<img src="images/admin/icone_article.png" alt="Bootstrap" class="img-fluid img-responsive logo">
-				</div>
-				<div class="col-sm-4 col-4 col-md-10 col-lg-10">
-					<h1>Gestion du compte</h1>
+		<div class="row d-flex justify-content-center ">
+			<div class="col-sm-4 col-4 col-md-3 col-lg-auto">
+				<div class="row">
+					<div class="col-sm-4 col-4 col-md-2 col-lg-2">
+						<img src="{{ asset('images/admin/compte.png') }}" alt="Bootstrap" class="img-fluid img-responsive logo">
+					</div>
+					<div class="col-sm-4 col-4 col-md-10 col-lg-10">
+						<h1>Gestion du compte</h1>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 d-flex justify-content-between username">
-			<div class="col-md-4 col-lg-4 d-flex align-items-center">
-				<p>Bonjour, <span class="font-weight-bold">{{ app.user.firstname }} {{ app.user.lastname }}</span></p>
+		<div class="row">
+			<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 d-flex justify-content-between username">
+				<div class="col-md-4 col-lg-4 d-flex align-items-center">
+					<p>Bonjour, <span class="font-weight-bold">{{ app.user.firstname }} {{ app.user.lastname }}</span></p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="offset-md-3 offset-lg-3 col-md-6 col-lg-6 container_own_article">
-			<h3 class="text-center">Informations compte</h3>
-			<div class="row">
-				<div class="login-form">
-                    {{ form_start(form) }}
-					<div class="form-group">
-						<label>Nom</label>
-                        {{ form_row(form.lastname, { 'value': compte.lastname}) }}
-					</div>
-					<div class="form-group">
-						<label>Prenom</label>
-                        {{ form_row(form.firstname, { 'value': compte.firstname}) }}
-					</div>
-					<div class="form-group">
-						<label>Email</label>
-                        {{ form_row(form.email, { 'value': compte.email}) }}
-					</div>
-					<div class="form-group">
-						<label>Login</label>
-                        {{ form_row(form.login, { 'value': compte.login}) }}
-					</div>
-					<div class="form-group">
-						<label>Mot de passe</label>
-                        {{ form_row(form.password) }}
-					</div>
-					<div class="form-check">
+		<div class="row">
+			<div class="offset-md-3 offset-lg-3 col-md-6 col-lg-6 container_own_article">
+				<h3 class="text-center">Informations compte</h3>
+				<div class="row">
+					<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10">
+						<div class="login-form">
+                            {{ form_start(form) }}
+							<div class="row">
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+										<label>Nom</label>
+                                        {{ form_row(form.lastname, { 'value': compte.lastname}) }}
+									</div>
+								</div>
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+										<label>Prenom</label>
+                                        {{ form_row(form.firstname, { 'value': compte.firstname}) }}
+									</div>
+								</div>
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+										<label>Email</label>
+                                        {{ form_row(form.email, { 'value': compte.email}) }}
+									</div>
+								</div>
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+										<label>Login</label>
+                                        {{ form_row(form.login, { 'value': compte.login}) }}
+									</div>
+								</div>
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+										<label>Mot de passe</label>
+                                        {{ form_row(form.password) }}
+									</div>
+								</div>
+								<div class="offset-md-2 offset-lg-2 col-md-8 col-lg-8">
+									<div class="form-group">
+											<p>Type de compte : {{ compte.account }}</p>
+									</div>
+								</div>
 
+							</div>
+                            {{ form_end(form) }}
+						</div>
 					</div>
-                    {{ form_end(form) }}
 				</div>
 			</div>
 		</div>
-	</div>
 		<!--
 		<div class="row">
 			<div class="offset-md-3 offset-lg-3 col-md-6 col-lg-6 container_own_article">
