--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
     <div class="container-fluid">
         <header>
-            <div class="row justify-content-around">
+            <div class="row justify-content-around block-first">
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
                         <h1>Cocorico Digital</h1>
