Update pictures homepage

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5 display-small">
-                    <img src="{{ asset('images/img.jpeg') }}" class="img-fluid img-round">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
@@ -152,7 +152,7 @@
 
         <section class="row justify-content-around">
             <div class="col-lg-5 display-small">
-                <img src="{{ asset('images/img.jpeg') }}" height="250" width="250">
+                <img src="{{ asset('images/contact_section.jpg') }}" height="250" width="250">
             </div>
             <div class="col-xs-12 col-lg-5">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Incommoda autem et commoda-ita enim estmata
