--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,7 +81,11 @@
             </div>
         </div>
         <div class="row col-3">
-            <div class="col-12">Logos réseaux sociaux</div>
+            <div class="col-12">
+                <img src="{{ asset('images/social/linkedin-logo.svg') }}" class="social" alt="logo linkedin">
+                <img src="{{ asset('images/social/twitter-logo-silhouette.svg') }}" class="social" alt="logo twitter">
+                <img src="{{ asset('images/social/facebook-logo.svg') }}" class="social" alt="logo facebook">
+            </div>
             <div class="col-12">
                 <p id="copyright">&copy; Cocorico Digital - 2018</p>
             </div>
