--- a/templates/admin/comptes.html.twig
+++ b/templates/admin/comptes.html.twig
@@ -1,7 +1,7 @@
 {% extends "admin/base.html.twig" %}
 {% block title %}Administration comptes{% endblock %}
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/articles.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/comptes.css') }}">
 {% endblock %}
 {% block body %}
 	<div class="container-fluid">
@@ -9,7 +9,7 @@
 		<div class="col-sm-4 col-5 col-md-5 col-lg-auto">
 			<div class="row">
 				<div class="col-sm-4 col-4 col-md-2 col-lg-2">
-					<img src="{{ asset('images/admin/comptes.png') }}" alt="Bootstrap" class="img-fluid img-responsive logo">
+					<img src="{{ asset('images/admin/articles.png') }}" alt="Bootstrap" class="img-fluid img-responsive logo">
 				</div>
 				<div class="col-sm-4 col-4 col-md-10 col-lg-10">
 					<h1>Administration comptes</h1>
@@ -25,18 +25,38 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="offset-md-3 offset-lg-3 col-md-6 col-lg-6 container_own_article">
+		<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
 			<h3 class="text-center">Liste des comptes</h3>
 			<div class="row">
-				<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10">
-                    {% for compte in comptes %}
-                       {{ form_start(form) }}
-                        {{ form_row(form.login) }}
+				<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 ">
+					<table class="table">
+						<thead>
+						<tr>
+							<th scope="col">Nom</th>
+							<th scope="col">Prénom</th>
+							<th scope="col">Email</th>
+							<th scope="col">Login</th>
+							<th scope="col">Mot de passe</th>
+							<th scope="col">Validation</th>
+						</tr>
+						</thead>
+						<tbody>
+                        {{ form_start(form) }}
+                        {% for user in form.users %}
+							<tr>
+								<td>{{ form_row(user.lastname) }}</td>
+								<td>{{ form_row(user.firstname) }}</td>
+								<td>{{ form_row(user.email) }}</td>
+								<td>{{ form_row(user.login) }}</td>
+								<td>{{ form_row(user.password) }}</td>
+								<td class="valid_button">{{ form_row(user.Modifier) }}</td>
+							</tr>
+                        {% endfor %}
                         {{ form_end(form) }}
-                    {% endfor %}
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
