--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -72,7 +72,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12 col-lg-12">
-								<p>{{ article.author }}</p>
+								<p>{{ article.author.firstname }} {{ article.author.lastname }}</p>
 							</div>
 						</div>
 						<div class="row content_article">
