--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -1,68 +1,74 @@
 {% extends "admin/base.html.twig" %}
 {% block title %}Gestion articles{% endblock %}
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/articles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/articles.css') }}">
 {% endblock %}
 {% block body %}
-	<div class="container-fluid">
-		<div class="row d-flex justify-content-center ">
-			<div class="col-sm-4 col-4 col-md-3 col-lg-auto">
-				<div class="row">
-					<div class="col-sm-4 col-4 col-md-2 col-lg-2">
-						<img src="images/admin/icone_article.png" alt="Bootstrap" class="img-fluid img-responsive logo">
-					</div>
-					<div class="col-sm-4 col-4 col-md-10 col-lg-10">
-						<h1>Gestion des articles</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 d-flex justify-content-between username">
-				<div class="col-md-4 col-lg-4 d-flex align-items-center">
-					<p>Bonjour, <span class="font-weight-bold">{{ app.user.firstname }} {{ app.user.lastname }}</span></p>
-				</div>
-				<div class="col-lg-auto d-flex align-items-center">
-					<label class="" for="inlineFormCustomSelect">Affichage</label>
-					<select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="displayArticle">
-						<option value="user" selected>User</option>
-						<option value="admin">Admin</option>
-					</select>
-				</div>
-			</div>
-		</div>
-		<div class="row d-flex justify-content-center">
-			<div class="row">
-				<div id='user' class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
-					<h3 class="text-center">Vos articles</h3>
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center ">
+            <div class="col-sm-4 col-4 col-md-3 col-lg-auto">
+                <div class="row">
+                    <div class="col-sm-4 col-4 col-md-2 col-lg-2">
+                        <img src="images/admin/icone_article.png" alt="Bootstrap" class="img-fluid img-responsive logo">
+                    </div>
+                    <div class="col-sm-4 col-4 col-md-10 col-lg-10">
+                        <h1>Gestion des articles</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 d-flex justify-content-between username">
+                <div class="col-md-4 col-lg-4 d-flex align-items-center">
+                    <p>Bonjour, <span class="font-weight-bold">{{ app.user.firstname }} {{ app.user.lastname }}</span>
+                    </p>
+                </div>
+                <div class="col-lg-auto d-flex align-items-center">
+                    <a href="{{ path("new_article") }}">
+                        <button>Nouvel article</button>
+                    </a>
+                </div>
+                <div class="col-lg-auto d-flex align-items-center">
+                    <label class="" for="inlineFormCustomSelect">Affichage</label>
+                    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="displayArticle">
+                        <option value="user" selected>User</option>
+                        <option value="admin">Admin</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="row">
+                <div id='user' class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
+                    <h3 class="text-center">Vos articles</h3>
                     {% for article in own_articles %}
-						<div class="row d-flex justify-content-between title_article">
-							<div class="col-md-2 col-lg-2">
-								<h5>{{ article.title }}</h5>
-							</div>
-							<div class="col-md-2 col-lg-2">
-								<p>{{ article.date|date("d-m-Y") }}</p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12 col-lg-12 content_article">
-								<p>{{ article.content|slice(0, 300) ~ '...'  }}</p>
-							</div>
-						</div>
-						<div class="row d-flex justify-content-end ">
-							<input type="button" value="Lire" class="btn btn-primary button">
-							<input type="button" value="Editer" class="btn btn-light button">
-							<input type="button" value="Supprimer" class="btn btn-danger button">
-						</div>
+                        <div class="row d-flex justify-content-between title_article">
+                            <div class="col-md-2 col-lg-2">
+                                <h5>{{ article.title }}</h5>
+                            </div>
+                            <div class="col-md-2 col-lg-2">
+                                <p>{{ article.date|date("d-m-Y") }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 col-lg-12 content_article">
+                                <p>{{ article.content|slice(0, 300) ~ '...' }}</p>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-end ">
+                            <input type="button" value="Lire" class="btn btn-primary button">
+                            <input type="button" value="Editer" class="btn btn-light button">
+                            <input type="button" value="Supprimer" class="btn btn-danger button">
+                        </div>
                     {% endfor %}
-				</div>
-			</div>
-			<!-- Div pour l'affichage des articles mode Admin -->
-			<div id="admin" class="row"></div>
-		</div>
-	</div>
+                </div>
+            </div>
+            <!-- Div pour l'affichage des articles mode Admin -->
+            <div id="admin" class="row"></div>
+        </div>
+    </div>
 {% endblock %}
 {% block javascripts %}
-	<script src="{{ asset('JS/jquery.js') }}"></script>
-	<script src="{{ asset('JS/articles.js') }}"></script>
+    <script src="{{ asset('JS/jquery.js') }}"></script>
+    <script src="{{ asset('JS/articles.js') }}"></script>
 {% endblock %}
