Link to read an article in admin area + HTML page article

--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="row d-flex justify-content-end ">
-                            <a href="{{ path('update_article', {'id': article.id}) }}">
+                            <a href="{{ path('article_page', {'id': article.id}) }}">
                                 <button class="btn btn-primary button">Lire</button>
                             </a>
                             <a href="{{ path('update_article', {'id': article.id}) }}">
