--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -5,5 +5,21 @@
 {% endblock %}
 
 {% block body %}
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>{{ article.title }}</h1>
+            </div>
+            <div class="col-lg-12">
+                <h2>Ecrit par {{ article.author.firstname }}
+                    le {{ article.date | date('d F Y') }}</h2>
+            </div>
+        </div>
+        <div class="row">
+            <p>{{ article.content }}</p>
+        </div>
+        <div class="row">
+            <a href="{{ path('blog_page') }}"><button>Blog</button></a>
+        </div>
+    </div>
 {% endblock %}
