--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -8,8 +8,8 @@
             <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
                 <div class="row d-flex justify-content-around">
                     <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <h1>Big Title</h1>
-                        <h3>Subtitle</h3>
+                        <h1>Nous contacter</h1>
+                        <h2>Subtitle</h2>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis.</p>
                     </div>
                     <div class="col-md-4 col-lg-4" style="border-style: solid;">
@@ -19,16 +19,27 @@
             </div>
         </div>
         <div class="row">
-            <div class="offset-md-4 offset-lg-4 col-md-4 col-lg-4" style="border-style: solid;">
-                <div class="text-center">
-                    <h1>Big Title</h1>
-                    <h3>Subtitle</h3>
+            <div class="col-12" style="border-style: solid;">
+                <div>
+                    <h4>Vous souhaitez nous contacter?</h4>
                 </div>
             </div>
         </div>
         <div class="row">
+            {% for message in app.flashes('notice') %}
+                <div class="flash-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
             <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <form>
+                {{ form_start(form) }}
+
+                {{ form_widget(form) }}
+
+                <button type="submit">Envoyer</button>
+
+                {{ form_end(form) }}
+               <!-- <form>
                     <div class="form-row d-flex justify-content-around">
                         <div class="form-group col-md-5 col-lg-5">
                             <label>Prénom</label>
@@ -58,7 +69,7 @@
                     <div class="row d-flex justify-content-around">
                         <button type="submit" class="btn btn-secondary btn-lg">Envoyer</button>
                     </div>
-                </form>
+                </form> -->
             </div>
         </div>
         <div class="row">
