--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -1,5 +1,6 @@
-div {
-    border: 1px solid;
+.home-customers{
+    width:960px;
+    margin: auto;
 }
 
 img:not(.display-small, #logo-nav img) {
@@ -21,5 +22,9 @@ img:not(.display-small, #logo-nav img) {
 @media screen and (min-width: 1280px) {
     h2 {
         margin-bottom: 1.5em;
+    }
+
+    .display-large{
+        display: none;
     }
 }
