--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -46,7 +46,7 @@
                         <img src="{{ asset('images/home/1.marketing.svg') }} " height="100" width="100">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
+                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
                             Tria</p>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <img src="{{ asset('images/home/2.design.svg') }} " height="100" width="100">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
+                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
                             Tria</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <img src="{{ asset('images/home/3.dev.svg') }} " height="100" width="100">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
+                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
                             Tria</p>
                     </div>
                 </div>
@@ -126,25 +126,25 @@
 
                 </div>
             </div>
-            <div class="row d-flex justify-content-around display-small home-customers block160">
+            <div class="row d-flex justify-content-center display-small home-customers block160">
                 <div class="row col-lg-12">
                     <h4>Nos clients</h4>
                 </div>
-                <div class="col-lg-3 no-padding white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                     <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                     <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
