--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <h5><a href="{{ path('contact_page') }}">Nous contacter</a></h5>
                 </nav>
             </div>
-            <div class="col-auto">
+            <div class="col-auto align-self-center">
                 <img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social" alt="logo linkedin">
                 <img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social" alt="logo facebook">
             </div>
